--- a/src/main/resources/assets/compressit/lang/en_us.json
+++ b/src/main/resources/assets/compressit/lang/en_us.json
@@ -27,5 +27,22 @@
   "item.compressit.bag_of_dark_oak_saplings": "Bag of dark oak saplings",
   "item.compressit.bag_of_birch_saplings": "Bag of birch saplings",
   "item.compressit.bag_of_acacia_saplings": "Bag of acacia saplings",
-  "item.compressit.bag_of_cherry_saplings": "Bag of cherry saplings"
+  "item.compressit.bag_of_cherry_saplings": "Bag of cherry saplings",
+
+  "item.compressit.tied_candles": "Tied candles",
+  "item.compressit.tied_black_candles": "Tied black candles",
+  "item.compressit.tied_blue_candles": "Tied blue candles",
+  "item.compressit.tied_brown_candles": "Tied brown candles",
+  "item.compressit.tied_cyan_candles": "Tied cyan candles",
+  "item.compressit.tied_gray_candles": "Tied gray candles",
+  "item.compressit.tied_light_blue_candles": "Tied light blue candles",
+  "item.compressit.tied_light_gray_candles": "Tied light gray candles",
+  "item.compressit.tied_lime_candles": "Tied lime candles",
+  "item.compressit.tied_magenta_candles": "Tied magenta candles",
+  "item.compressit.tied_orange_candles": "Tied orange candles",
+  "item.compressit.tied_pink_candles": "Tied pink candles",
+  "item.compressit.tied_purple_candles": "Tied purple candles",
+  "item.compressit.tied_red_candles": "Tied red candles",
+  "item.compressit.tied_white_candles": "Tied white candles",
+  "item.compressit.tied_yellow_candles": "Tied yellow candles"
 }
