--- a/src/main/resources/assets/compressit/lang/en_us.json
+++ b/src/main/resources/assets/compressit/lang/en_us.json
@@ -44,5 +44,23 @@
   "item.compressit.tied_purple_candles": "Tied purple candles",
   "item.compressit.tied_red_candles": "Tied red candles",
   "item.compressit.tied_white_candles": "Tied white candles",
-  "item.compressit.tied_yellow_candles": "Tied yellow candles"
+  "item.compressit.tied_yellow_candles": "Tied yellow candles",
+
+  "item.compressit.allium_bouquet": "Allium bouquet",
+  "item.compressit.azure_bluet_bouquet": "Azure bluet bouquet",
+  "item.compressit.blue_orchid_bouquet": "Blue orchid bouquet",
+  "item.compressit.cornflower_bouquet": "Cornflower bouquet",
+  "item.compressit.dandelion_bouquet": "Dandelion bouquet",
+  "item.compressit.lilac_bouquet": "Lilac bouquet",
+  "item.compressit.lily_of_the_valley_bouquet": "Lily of the valley bouquet",
+  "item.compressit.oxeye_daisy_bouquet": "Oxeye daisy bouquet",
+  "item.compressit.peony_bouquet": "Peony bouquet",
+  "item.compressit.poppy_bouquet": "Poppy bouquet",
+  "item.compressit.rose_bush_bouquet": "Rose bush bouquet",
+  "item.compressit.sunflower_bouquet": "Sunflower bouquet",
+  "item.compressit.wither_rose_bouquet": "Wither rose bouquet",
+  "item.compressit.orange_tulip_bouquet": "Orange tulip bouquet",
+  "item.compressit.pink_tulip_bouquet": "Pink tulip bouquet",
+  "item.compressit.red_tulip_bouquet": "Red tulip bouquet",
+  "item.compressit.white_tulip_bouquet": "White tulip bouquet"
 }
